# chaine

./: .gitignore  LICENSE  MANIFEST.in  README.md  _notebook.html  build.py  cythonize.py  cythonize.sh  example.html  glibc.h  index.html  mise.toml  pyproject.toml  setup.py  styles.css  test.py  usage.html
.github/workflows/: main.yml
chaine/: __init__.py  api.py  core.py  crf.cpp  crf.py  crf.pyx  crfsuite_api.pxd  data.py  logging.py  metrics.py  model.cpp  model.py  model.pyx  optimization.py  tagger_wrapper.hpp  trainer_wrapper.cpp  training.py  typing.py  utils.py  validation.py  wip.py
chaine/_core/: crf.cpp  crf.pyx  tagger_wrapper.hpp  trainer_wrapper.cpp  trainer_wrapper.hpp
chaine/_core/crfsuite/include/: crfsuite.h  crfsuite_api.hpp
chaine/_core/crfsuite/lib/cqdb/include/: cqdb.h
chaine/_core/crfsuite/lib/cqdb/src/: cqdb.c  lookup3.c
chaine/_core/crfsuite/lib/crf/src/: crf1d.h  crf1d_model.c  crf1d_tag.c  crfsuite.c  crfsuite_internal.h  dictionary.c  json.c  json.h  logging.c  logging.h  quark.c  rumavl.c  rumavl.h  train_arow.c  train_l2sgd.c  train_passive_aggressive.c
chaine/_core/liblbfgs/include/: lbfgs.h
chaine/_core/liblbfgs/lib/: arithmetic_sse_double.h  lbfgs.c
chaine/core/: crf.cpp  crf.pyx  crfsuite_api.pxd
chaine/core/crfsuite/include/: os.h
chaine/core/crfsuite/lib/cqdb/src/: cqdb.c
chaine/core/crfsuite/lib/crf/src/: crf1d.h  crf1d_feature.c  crf1d_model.c  dataset.c  holdout.c  quark.h  train_lbfgs.c
chaine/core/liblbfgs/include/: lbfgs.h
chaine/crfsuite/include/: crfsuite.h  crfsuite.hpp  crfsuite_api.hpp
chaine/crfsuite/lib/cqdb/src/: lookup3.c  main.c
chaine/crfsuite/lib/crf/src/: crf1d_context.c  crf1d_encode.c  crf1d_feature.c  crf1d_model.c  crf1d_tag.c  crfsuite.c  crfsuite_train.c  logging.c  params.c  params.h  rumavl.h  train_arow.c  train_averaged_perceptron.c  train_l2sgd.c  train_lbfgs.c  train_passive_aggressive.c  vecmath.h
chaine/liblbfgs/lib/: arithmetic_ansi.h  arithmetic_sse_float.h  lbfgs.c
chaine/optimization/: __init__.py  metrics.py  spaces.py  trial.py  utils.py
data/: test.txt  train.txt
examples/: README.md  conll.py  ner.py  optimization.py  training.py  utils.py
examples/notebooks/: ner.ipynb
examples/scripts/: README.md  optimization.py  training.py  utils.py
notebooks/: tutorial.ipynb  tutorial_nodatasets.ipynb
tests/: test_api.py  test_core.py  test_crf.py  test_data.py  test_logging.py  test_model.py  test_optimization_metrics.py  test_optimization_trial.py  test_optimization_utils.py  test_trainer.py  test_training.py  test_utils.py  test_validation.py
tools/: cythonize.py
