[project]
name = "chaine"
version = "4.0.0b1"
description = "Linear-chain conditional random fields for natural language processing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Severin Simmler", email = "s.simmler@snapaddy.com" }]

[dependency-groups]
dev = ["cython>=3.0.0", "pytest>=9.0.0", "jupyterlab>=4.5.0"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
before-build = "rm -rf build"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[build-system]
requires = ["setuptools>=80.0.0", "wheel>=0.45.0", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"
