[project]
name = "chaine"
version = "4.0.1"
description = "Linear-chain conditional random fields for natural language processing"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Severin Simmler", email = "s.simmler@snapaddy.com" }]
keywords = ["nlp", "crf", "conditional-random-fields", "machine-learning", "sequence-labeling"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Repository = "https://github.com/severinsimmler/chaine"

[dependency-groups]
dev = [
    "cython>=3.0.0",
    "setuptools>=80.0.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "jupyterlab>=4.5.0",
    "seqeval>=1.2.2",
    "datasets>=4.4.2",
    "pandas>=2.3.3",
    "ipywidgets>=8.1.8",
]

[tool.ruff]
line-length = 100
extend-exclude = ["chaine/_core", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
    "E741", # ambiguous variable names like `l` are fine here
]

[tool.ruff.lint.per-file-ignores]
# NumberSeries is immutable, so instances are safe as default arguments
"chaine/optimization/spaces.py" = ["B008"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
before-build = "rm -rf build"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[build-system]
requires = ["setuptools>=80.0.0", "wheel>=0.45.0", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"
